<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activity.FormularioCadastroUsuarioActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtNome"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_cadastro_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/txtNome"
            app:layout_constraintStart_toStartOf="@id/txtNome"
            app:layout_constraintTop_toBottomOf="@id/txtNome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_cadastro_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtSenha"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/txtEmail"
            app:layout_constraintStart_toStartOf="@id/txtEmail"
            app:layout_constraintTop_toBottomOf="@id/txtEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_cadastro_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtConfirmaSenha"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/txtSenha"
            app:layout_constraintStart_toStartOf="@id/txtSenha"
            app:layout_constraintTop_toBottomOf="@id/txtSenha">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_cadastro_confirma_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmaSenha"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtTelefone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/txtConfirmaSenha"
            app:layout_constraintStart_toStartOf="@id/txtConfirmaSenha"
            app:layout_constraintTop_toBottomOf="@id/txtConfirmaSenha">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_cadastro_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEstado"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/txtTelefone"
            app:layout_constraintStart_toStartOf="@id/txtTelefone"
            app:layout_constraintTop_toBottomOf="@id/txtTelefone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_cadastro_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estado"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtCidade"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/txtEstado"
            app:layout_constraintStart_toStartOf="@id/txtEstado"
            app:layout_constraintTop_toBottomOf="@id/txtEstado">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_cadastro_cidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cidade"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtParoquia"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/txtCidade"
            app:layout_constraintStart_toStartOf="@id/txtCidade"
            app:layout_constraintTop_toBottomOf="@id/txtCidade">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_cadastro_paroquia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/paroquia"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/activity_formulario_cadastro_botao_cadastrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cadastrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/txtParoquia"
            app:layout_constraintStart_toStartOf="@id/txtParoquia"
            app:layout_constraintTop_toBottomOf="@id/txtParoquia"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>